JSON.stringify replacer returning undefined does not omit object properties https://bugs.webkit.org/show_bug.cgi?id=28118

Reviewed by George Staikos

Correct behaviour of stringify when using a replacer function that returns
undefined.  This is a simple change to move the undefined value check to
after the replacer function is called.  This means that the replacer function
is now called for properties with the value undefined, however i've confirmed
that this behaviour is correct.

In addition I've made the cyclic object exception have a more useful error
message.


git-svn-id: svn://svn.chromium.org/blink/trunk@46967 bbb929c8-8fbe-4397-9dbb-9b2b20218538